[gd_scene load_steps=5 format=3 uid="uid://dp1h46aky84if"]

[ext_resource type="Script" path="res://Scripts/RespawnMenuScript.gd" id="1_qexre"]

[sub_resource type="FontFile" id="FontFile_yn2gq"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_lg6eq"]
line_spacing = 5.0
font = SubResource("FontFile_yn2gq")
font_size = 80
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_dvunk"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0

[node name="RespawnMenu" type="CanvasLayer"]
script = ExtResource("1_qexre")

[node name="PanelContainer2" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2"]
custom_minimum_size = Vector2(700, 600)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="DeathLabel" type="Label" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You Died
"
label_settings = SubResource("LabelSettings_lg6eq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="RespawnButton" type="Button" parent="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_dvunk")
theme_override_font_sizes/font_size = 55
text = "Respawn"

[connection signal="pressed" from="PanelContainer2/PanelContainer/CenterContainer/VBoxContainer/RespawnButton" to="." method="_on_respawn_button_pressed"]
